# EcsTemplate

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  EcsTemplate.cpp  EcsTemplate.h  LICENSE.txt  README.md  main.cpp
cmake/: BuildInfo.cmake  PrintTargetProperties.cmake  buildinfo.h.in  print_target_properties.cmake
src/: console.cpp  console.hpp  globals.cpp  globals.hpp  logger.cpp  logger.hpp
src/platform/: platform_base.cpp  platform_base.hpp  platform_windows.cpp  platform_windows.hpp
